# SillaSamuROS

./: README.md  desktop.ini  ros2bag_to_csv.py  ros2bag_to_csv.py.OLD  rosbag2csv.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
rosbag2_2025_10_22-13_13_59/: metadata.yaml  rosbag2_2025_10_22-13_13_59_0.db3
rosbag2_2025_10_22-13_13_59/rosbag2_2025_10_22-13_13_59_0_csv/: Ejecucion.csv  name_movil.csv  rosout.csv  tipo_exp.csv
samuchair_bag/20251022_110032/: 20251022_110032_0.db3  metadata.yaml
samuchair_bag/20251022_110032/20251022_110032_0_csv/: diff_time.csv  random_time.csv  rosout.csv
samuchair_bag/20251022_110540/: 20251022_110540_0.db3  metadata.yaml
samuchair_bag/20251022_110540/20251022_110540_0_csv/: diff_time.csv  random_time.csv  rosout.csv
samuchair_bag/20251022_131114/: 20251022_131114_0.db3  metadata.yaml
samuchair_bag/20251022_131114/20251022_131114_0_csv/: diff_time.csv  random_time.csv  rosout.csv
samuchair_bag/20251027_194254/: 20251027_194254_0.db3
samuchair_bag/20251118_231306/: 20251118_231306_0.db3  metadata.yaml
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_robot_controller/: setup.py
src/my_robot_controller/install/: setup.sh  (+1 more)
src/prueba/: setup.py
src/samuchair/: setup.cfg  setup.py
src/samuchair_interfaces/: CMakeLists.txt
src/samuchair_interfaces/srv/: ArduinoMotor.srv  Movil.srv
src/samuchair_interfaces/srv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/samuchair_interfaces/srv/log/: latest_build
(+82 files in other folders)
